# xlsx

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  ROADMAP.md  pyproject.toml  test.py  test_style.py  test_style.xlsx
.cargo/: config.toml
.github/actions/cache_cargo/: action.yml
.github/workflows/: CI.yml
data/: sample.xlsx  sample2.xlsx  shared_strings_test.xlsx  sheet2.xml  test_output.xlsx  write_test.xlsx
data/unzipped/xl/: workbook.xml
data/unzipped/xl/worksheets/: sheet1.xml
performance_comparison/: comparison.py
src/: lib.rs
src/xlsx/: __init__.py  _core.pyi  book.rs  cell.rs  init.xlsx  sheet.rs  style.rs  test_book.rs  test_cell.rs  test_sheet.rs  test_xml.rs  xml.rs
src/xlsx_module/: __init__.py  book.rs  cell.rs  sheet.rs  test_book.rs  test_cell.rs  test_sheet.rs  test_xml.rs  xml.rs
