[package]
name = "xlsx"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xlsx"
crate-type = ["cdylib", "rlib"]

[dependencies]
cargo-llvm-cov = "0.6.14"
pyo3 = { version = "0.24.0", features = ["extension-module", "macros"] }
umya-spreadsheet = "2.3.0"
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6"
chrono = "0.4"
